CHATS_SIT/force-app/main/default/objects/batchsit_t_sbsd_case_cmt__x.object
<CustomObject>
    <description>batchsit$t_sbsd_case_cmt</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sbsd_case_cmt</externalName>
    <fields>
        <fullName>cde_type_cmt__c</fullName>
        <description>cde_type_cmt</description>
        <externalDeveloperName>cde_type_cmt</externalDeveloperName>
        <label>Note Generation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_note_cmt__c</fullName>
        <description>cde_type_note_cmt</description>
        <externalDeveloperName>cde_type_note_cmt</externalDeveloperName>
        <label>Note Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_case_cmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_appointment__c</fullName>
        <description>dte_appointment</description>
        <externalDeveloperName>dte_appointment</externalDeveloperName>
        <label>Appointment Date/Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Comment</relationshipLabel>
        <relationshipName>batchsit_t_sbsd_case_cmt</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_cmt__c</fullName>
        <description>idn_sbsd_case_cmt</description>
        <externalDeveloperName>idn_sbsd_case_cmt</externalDeveloperName>
        <label>Comment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_case_cmt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt__c</fullName>
        <description>txt_cmt</description>
        <externalDeveloperName>txt_cmt</externalDeveloperName>
        <label>Note Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_subj__c</fullName>
        <description>txt_subj</description>
        <externalDeveloperName>txt_subj</externalDeveloperName>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Case Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Case Comment</pluralLabel>
</CustomObject>