CHATS_SIT/force-app/main/default/objects/batchsit_t_sbsd_case_cmt__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>